--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,12 @@ dependencies {
     implementation 'io.coil-kt:coil:1.4.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
-    //implementation 'androidx.fragment:fragment-ktx:1.5.4'
+
+
+    implementation 'androidx.camera:camera-camera2:1.1.0-beta02'
+    implementation 'androidx.camera:camera-lifecycle:1.1.0-beta02'
+    implementation 'androidx.camera:camera-view:1.1.0-beta02'
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
