--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,9 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables {
+            useSupportLibrary true
+        }
     }
 
     buildTypes {
@@ -34,6 +37,15 @@ android {
     }
     buildFeatures {
         dataBinding true
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.1.1'
+    }
+    packagingOptions {
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
     }
 }
 
@@ -60,7 +72,6 @@ dependencies {
     implementation("org.tensorflow:tensorflow-lite:0.0.0-nightly-SNAPSHOT")
     implementation("org.tensorflow:tensorflow-lite-support:0.1.0")
 
-    /*
     //compose
     implementation("androidx.compose.ui:ui:1.2.1")
     // Tooling support (Previews, etc.)
@@ -76,12 +87,15 @@ dependencies {
     implementation("androidx.activity:activity-compose:1.2.1")
     //Integration with ViewModels
     implementation("androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1")
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     // UI Tests
     androidTestImplementation("androidx.compose.ui:ui-test-junit4:1.3.0")
-    */
 
+    implementation 'io.coil-kt:coil-compose:1.3.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
 }
