--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
-    id 'androidx.navigation.safeargs'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.cristian.castellanos.dogedex"
@@ -73,22 +73,30 @@ dependencies {
     implementation("org.tensorflow:tensorflow-lite-support:0.1.0")
 
     //compose
-    implementation("androidx.compose.ui:ui:1.2.1")
+    implementation("androidx.compose.ui:ui:1.3.3")
     // Tooling support (Previews, etc.)
-    implementation("androidx.compose.ui:ui-tooling:1.2.1")
+    implementation("androidx.compose.ui:ui-tooling:1.3.3")
     // Foundation (Border, Background, Box, Image, Scroll, shapes, animations, etc.)
-    implementation("androidx.compose.foundation:foundation:1.2.1")
+    implementation("androidx.compose.foundation:foundation:1.3.1")
     // Material Design
-    implementation("androidx.compose.material:material:1.2.1")
+    implementation("androidx.compose.material:material:1.3.1")
     // Material design icons
-    implementation("androidx.compose.material:material-icons-core:1.2.1")
-    implementation("androidx.compose.material:material-icons-extended:1.2.1")
+    implementation("androidx.compose.material:material-icons-core:1.3.1")
+    implementation("androidx.compose.material:material-icons-extended:1.3.1")
     //Integration with activities
-    implementation("androidx.activity:activity-compose:1.2.1")
+    implementation("androidx.activity:activity-compose:1.6.1")
     //Integration with ViewModels
     implementation("androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1")
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
+    //Navigation
+    implementation "androidx.navigation:navigation-compose:2.5.1"
+
+    //Dagger Hilt
+    implementation 'com.google.dagger:hilt-android:2.41'
+    kapt 'com.google.dagger:hilt-android-compiler:2.41'
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+
     // UI Tests
     androidTestImplementation("androidx.compose.ui:ui-test-junit4:1.3.0")
 
