--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        compose_ui_version = '1.2.1'
+        compose_ui_version = '1.3.3'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
@@ -8,4 +8,5 @@ plugins {
     id 'com.android.library' version '7.3.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
     id 'androidx.navigation.safeargs' version '2.4.1' apply false
+    id 'com.google.dagger.hilt.android' version '2.41' apply false
 }
